# ChangeLog for gnome-extra/at-spi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.233 2012/11/05 21:41:26 ulm Exp $

  05 Nov 2012; Ulrich Müller <ulm@gentoo.org> at-spi-2.0.0.ebuild,
  at-spi-2.2.0.ebuild, at-spi-2.4.0.ebuild:
  Change LICENSE to "metapackage", bug 440846.

*at-spi-2.4.0 (24 Aug 2012)

  24 Aug 2012; Gilles Dartiguelongue <eva@gentoo.org> +at-spi-2.4.0.ebuild:
  Version bump.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> at-spi-1.32.0.ebuild,
  at-spi-1.32.0-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  10 Feb 2012; Patrick Lauer <patrick@gentoo.org> at-spi-1.32.0-r1.ebuild,
  at-spi-1.32.0.ebuild:
  Changing python deps in preparation for 2.4 removal

*at-spi-2.2.0 (16 Nov 2011)

  16 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +at-spi-2.2.0.ebuild:
  Bump the at-spi:2 meta package from the gnome overlay.

  17 Oct 2011; Pacho Ramos <pacho@gentoo.org> at-spi-1.32.0-r1.ebuild:
  Drop KEYWORDS as it breaks other software, bug #323701

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> at-spi-1.32.0-r1.ebuild:
  ppc/ppc64 stable wrt #385699

  14 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> at-spi-1.32.0-r1.ebuild:
  amd64 stable wrt #385699

  10 Oct 2011; Pacho Ramos <pacho@gentoo.org> at-spi-1.32.0-r1.ebuild:
  Drop .la files, bug #386665 by Ago.

*at-spi-2.0.0 (19 Aug 2011)
*at-spi-1.32.0-r1 (19 Aug 2011)

  19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +at-spi-1.32.0-r1.ebuild,
  +at-spi-2.0.0.ebuild:
  Bump to 2.0.0, from gnome overlay for GNOME 3

  14 Apr 2011; Gilles Dartiguelongue <eva@gentoo.org> -at-spi-1.30.1.ebuild:
  Clean up old revision.

  22 Mar 2011; Brent Baude <ranger@gentoo.org> at-spi-1.32.0.ebuild:
  Marking at-spi-1.32.0 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> at-spi-1.32.0.ebuild:
  ppc64 stable wrt #353436
