@@ -6,25 +6,14 @@ AUX at-spi-1.30.1-make-382.patch 679 SHA256 a04b3315ea9e9cc2d4ec3a33ee582126d88d
 DIST at-spi-1.32.0.tar.bz2 845788 SHA256 cc841dea746413eebadf0710dabec741450b37a06821c34526f505fe9d027039
 EBUILD at-spi-1.32.0-r1.ebuild 1648 SHA256 786ff1bc1ba647b3c241e6450f984f91e4a33cebdeb2f0a16efaab91512d03fe SHA512 b018fc5293f96b59412a445db7ca7f5a81c8f48d4843933cb74eeaf77f9d30c2c28e413e0139257e3c4761dbf891dd2c28c1fe6339f804ea18ce0ec69add22be WHIRLPOOL 3463e7e07c1c04912169adefe276b33be648b85532281411eb217126761bb312456bdbe8f302c542d5ff74a286181913fcb25f11ab4b2dbed57778383fb56839
 EBUILD at-spi-1.32.0.ebuild 1547 SHA256 7cf0d8c7ceee62d6190c89da449fa51e20df9db174b2776f097bdd4f166ecd75 SHA512 948469186742ab3f826081ccb1705fb5adb351e505a40f19a39f4d5fb483ced5053cd36338f27b384c47627f441a96e8c541392efe0e4db2de64eafd09e806a6 WHIRLPOOL dbce6e008797c8c976e47bed493dfe8466df0a2d00810e25baf510e1d2f5ad09587aeac9176a2a974c16b32789e8a3f2279a398b1c195b8c97351bb5e818c561
-EBUILD at-spi-2.0.0.ebuild 566 SHA256 d054a738b3bac284e510d8c0a7b961f0ae73d55c3c9b9d211db92f987c9413c5 SHA512 57eccd99bd0477b83d7de6e5cc2216efda6d59e7e120d1da3d9f9f6e167cdefea0471a2325fc89bcc444ad219701c73a45423d26685151271ef3fabcf3ebafc1 WHIRLPOOL a6f0e4205cbcec5197e63e83c7cc6fc7898af156da8285e759033e32aa4dbf421c216ab875f8707c4b2ee4ad3e122df4d533c128068c96dde1161eb78149dafd
-EBUILD at-spi-2.2.0.ebuild 566 SHA256 b73af6961144bf4bf2a6f3a1cdaaa32126bfab5bb44a4aa7a5f92a49efb1add8 SHA512 a1b91b03b4a4e8298f8dcada02fab320bd1ee863b6747a2db3174f7ead6f909a2a8f1c323b1e9e0d3f84e31ff9e9444ab9b02be68b42db03c122c12c77d9828a WHIRLPOOL fd04a853b2555b1d6fd5375871c8e21da4eacfca37219bcd5049433085125c15b86f5ddef14e0cfedc792d5ed901c5249efe42405a0e34b3c1a3b20705744c1a
 EBUILD at-spi-2.4.0.ebuild 577 SHA256 e19098834dbca589baa523548b803f5a87eebf4805b91a94b4e0f4b3f80f0d16 SHA512 8fbe0db61cc998188b94fc1a9f4545249610c880bda3d2f25015a7f4461a2ae1976218fd805a4d0518475b0d1792d5101ac54b6c42d6a694288159096b58e288 WHIRLPOOL ced372b215d2cfff87b709d7458071c73fcda7c673a676744ed95ae23a5c923ae5a5a6c16e58398cdc4f5b81deb4346c2f28321172d4840361ccb204631179c8
-MISC ChangeLog 27978 SHA256 fef1207f6b40f9f645d6d72e23b7e936ac366edc2dd0c75c967061afc439aa0b SHA512 0d6262e765247b6f6dd701ddd05467b1198c66161807c52eb295e05acec1912964d1d8e6e83ab59d3e2379f7fdf233cd4272b6b7eb3046a086607d409ea7f774 WHIRLPOOL f971c2e27d1fe8bf27b41065bcfbce9fdecf0d1db8600f2a476701d1275c6c2a5574e4789645ea22df1dad374c8a566c97546dbc006ff0d91e33bc902e769601
+EBUILD at-spi-2.6.0.ebuild 577 SHA256 ab9f3807ed20708920f7c68d4328c94b6bfe87780a413eb61059076f8f178dba SHA512 4fd093214eee61749621cb5df86fc271d495f616fe8345f66e76fd95220d728c0aea5ee5d2bcb38e97fc2ac8fd4d7fe397e3c3d22be2f0a338d10c12b4c61a32 WHIRLPOOL 1156e5dc509199b296ee9cd3f4063186bb348c6a3b71a3782bfd4ce230aca06ca5a2d41d34756de44299ac6a7b86aebeeefaea9b2c7b316cf5f0d01993f89ada
+MISC ChangeLog 28146 SHA256 ab2c6c97d4e123cdb3d5b919db852a28e66c9b0bf69ca3b25847c9dd7e830885 SHA512 7531519943e6ea30a955e53921b80c4620af0c48f7b1910a95d4726a69be5148b06920b2a334ff2e164b77ce49acafe5d783d2e3f1a681bc7881ae1a0194db4d WHIRLPOOL 1d8085053387df4d266fb439fe2a394780b4e38849ba68481b37fc2315ad93ec361a72e6e36e30331a2bfb874ccc5115a1b1bce0565703df10971105a884caa2
 MISC metadata.xml 172 SHA256 f14db6f3dc189eb3e4a3478d7c1bead86fe077d0c756b8426b64f7fc0d42d228 SHA512 08900050a4d17b5951615f1989c5585edb9e9f2e56b484fa74ac2d735ebbf6f8a939612101bc988cb30c8f05d2b61033847184479092386718bcc8609c5e1adb WHIRLPOOL fc5ac7457fd7bf5b72d5f1513b1f1f909e3c09c6b880335b77656c82044f1b3f8dac58f6baef5df4557d7e5688e40c80b226aa4ba108a46a33d57204c26314a9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQmDKmAAoJEDxpGckxwJCB0j8P/1ajgz9HeMtg+yfeWPBm7FKd
-uwRiwRXclWLBLm7dN4CLjUqQzH00BmETxzuAbSiqbjfGwkfTwBd5oVgHcF7x63Xe
-VGVwPZH28ZsiTe/FNXYYjlcL1lntvC2X0ojmjWKoNRMpRFk33+2BrvLPzjS0masr
-XpBpjTk5q6IWg7m2wgMOkGZaHYF3y3EgsUeOd5L3n+lXEOsw52fZJ4sz9tCW3qcs
-5BUFev1FZCUtR/k2Z4/ooOT0EBu9GvTCJZj3hcvb2xOoUXNYCQBnIIUoVi5uyLU8
-ML6KOvqNtT4rD8VwBt/j4D/HeOIPEVg8lPHSTN8TcVZ9WPDmmSn3S2WawRBDhgRw
-lBIPUJEEdNu98GG695kOJE1YZzQOxXb31hFQNXAc9wsENnYz9hwHbwhGabR00knS
-RXUTX7ioiBpGkeAAOXlqkX5SQm2EyTJfqecOShTyvpGHbduOQfXiz5w2EJttofRo
-mPNXXnlj7Olnc0vxbUq7z0w4PbqJMli1KRr87qWfQoA/ElgT/2+epAmTPfUYs60N
-31Mu6+tzrHEXh+2BgEq20gPvfIIVuW1OhzLMmC0A8zTaSNUCuP6QcKoHH8/plzX5
-/cCVsoPWXi6F92gVmJ8nrv6dHLuW+hzVQ8+hHBJ++dwBzUv1snWamBej54SMbDV8
-+rJn927Vxnbv3FAfbkDr
-=arkR
+iEYEAREIAAYFAlEKy9MACgkQ1fmVwcYIWAbNiQCeNxHXb3mdcB8F/cs6cTRYISX1
+mdkAmQEqDuD4MZLHYpGjXTiTuB8iUSCZ
+=Lnng
 -----END PGP SIGNATURE-----
