@@ -1,22 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/Attic/at-spi-2.2.0.ebuild,v 1.2 2012/11/05 21:41:26 ulm Exp $
-
-EAPI="4"
-
-DESCRIPTION="The Gnome Accessibility Toolkit"
-HOMEPAGE="http://projects.gnome.org/accessibility/"
-SRC_URI=""
-
-LICENSE="metapackage"
-SLOT="2"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-RDEPEND="
-	>=app-accessibility/at-spi2-atk-${PV}:2
-	>=app-accessibility/at-spi2-core-${PV}:2
-	>=dev-python/pyatspi-${PV}
-	!<gnome-extra/at-spi-1.32.0-r1
-"
-DEPEND=""
