@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/Attic/at-spi-2.0.0.ebuild,v 1.2 2012/11/05 21:41:26 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/Attic/at-spi-2.6.0.ebuild,v 1.1 2013/01/31 19:53:53 eva Exp $
 
-EAPI="3"
+EAPI="5"
 
 DESCRIPTION="The Gnome Accessibility Toolkit"
 HOMEPAGE="http://projects.gnome.org/accessibility/"
@@ -10,7 +10,7 @@ SRC_URI=""
 
 LICENSE="metapackage"
 SLOT="2"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~arm ~hppa ~x86"
 IUSE=""
 
 RDEPEND="
