@@ -1,6 +1,12 @@
 # ChangeLog for gnome-extra/at-spi
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.233 2012/11/05 21:41:26 ulm Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/at-spi/ChangeLog,v 1.234 2013/01/31 19:53:53 eva Exp $
+
+*at-spi-2.6.0 (31 Jan 2013)
+
+  31 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org> -at-spi-2.0.0.ebuild,
+  -at-spi-2.2.0.ebuild, +at-spi-2.6.0.ebuild:
+  Version bump.
 
   05 Nov 2012; Ulrich Müller <ulm@gentoo.org> at-spi-2.0.0.ebuild,
   at-spi-2.2.0.ebuild, at-spi-2.4.0.ebuild:
